# consequence_of_boredom_and_curiosity

./: .codex-reminder.md  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
bench/: bench_ab.c  bench_gemm.c
docs/: benchmarking.md  claims.md  optimization-design-rules.md  optimization-timeline.md  project-status.md
docs/audits/: 2026-05-10-claim-audit.md  2026-07-12-square-crossover.md
hf/: publish.sh
hf/sgemm-benchmarks-dataset/: README.md
hf/sgemm-benchmarks-dataset/data/: benchmark_results.csv  mpgemm_comparison.csv  paired_confirmations.csv  research_attempts.csv
hf/sgemm-dashboard-space/: README.md  index.html
hf/sgemm-dashboard-space/data/: fresh_paired_runs.csv  hardware_context.json  optimization_timeline.csv  optimization_timeline.md  schema.json  validation_runs.csv
include/: cob_gemm.h
src/: gemm.c
tests/: test_gemm.c
tools/: bench_gap_report.py  bench_grid.sh  bench_heatmap.py  bench_sanity_report.py  claim_audit.sh  counter_probe.sh  export_hf_dataset.py  hf_dashboard_template.html  mpgemm_calibration.sh  mpgemm_gap_report.py  paired_ab_bench.sh  paired_accelerate_bench.sh  xctrace_metric_summary.py  xctrace_time_sample_summary.py
